// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`go to create page 1`] = `
Object {
  "Constructor": "ProjectsList",
  "Options": Object {
    "ID": "component",
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "hrefto": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
  },
  "html": "
<div class=\\"project-list\\">
  <!--for-->
  <a class=\\"project-card project-card-create\\" href=\\"/\\">
    <div class=\\"create-icon\\"></div>
  </a>
</div>
",
}
`;

exports[`renders correctly 1`] = `
Object {
  "Constructor": "ProjectsList",
  "Options": Object {
    "ID": "component",
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "hrefto": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
  },
  "html": "
<div class=\\"project-list\\">
  <!--for-->
  <a class=\\"project-card project-card-create\\" href=\\"/\\">
    <div class=\\"create-icon\\"></div>
  </a>
</div>
",
}
`;

exports[`renders list 1`] = `
Object {
  "Constructor": "ProjectsList",
  "Options": Object {
    "ID": "component",
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "hrefto": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "projects": Array [
      Object {
        "cwd": "/tmp/",
        "id": 1,
        "name": "Simple CI",
      },
      Object {
        "cwd": "/home/",
        "id": 1,
        "name": "ShamUI",
      },
    ],
  },
  "html": "
<div class=\\"project-list\\">
  <a class=\\"project-card\\" href=\\"undefined\\"><span class=\\"name\\">Simple CI</span></a>
  <a class=\\"project-card\\" href=\\"undefined\\"><span class=\\"name\\">ShamUI</span></a>
  <!--for-->
  <a class=\\"project-card project-card-create\\" href=\\"/\\">
    <div class=\\"create-icon\\"></div>
  </a>
</div>
",
}
`;
